# newton

./: .gitignore  .repomixignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.md  TESTING.md  architecture.md  auto_release_trigger.txt  clippy.toml  n  newton-musl  package.json  pnpm-workspace.yaml  repomix.config.json  rust-toolchain.toml  skill-project.toml  test_results.json  test_results.md  tsconfig.base.json
crates/backend/: Cargo.toml
crates/backend/migrations/: 001_init.sql  002_grades.sql  003_workflow_runtime.sql  004_grading.sql  005_plan_optimize.sql  006_optimize_run.sql
crates/backend/src/: fixtures.rs  lib.rs  models.rs  service.rs  store.rs
crates/backend/src/store/: catalog.rs  eval.rs  finding.rs  helpers.rs  migration.rs  mod.rs  optimize_run.rs  plan.rs  rows.rs  workflow_runtime.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: lib.rs  main.rs
crates/cli/src/cli/: args.rs  ask.rs  categories.rs  commands.rs  context.rs  exit.rs  framework_setup.rs  help_text.rs  init.rs  log_invocation.rs  mcp.rs  mod.rs  ops.rs  workspace_paths.rs
crates/cli/src/cli/commands/: artifact.rs  batch.rs  checkpoint.rs  data.rs  import.rs  log.rs  mod.rs  optimize.rs  schema.rs  serve.rs  shared_execution.rs  webhook.rs  workflow.rs
crates/cli/src/cli/framework_setup/: error_codes.rs  mcp.rs  mod.rs
crates/cli/src/monitor/: config.rs  mod.rs  state.rs  ui.rs
crates/cli/tests/: E2E_COVERAGE.md  e2e_matrix_stub_tests.rs  monitor_integration_test.rs  test_cli_help.rs  test_e2e_coverage_matrix.rs  test_monitor_config.rs  test_version_functionality.rs  test_workflow_file_argument.rs  unit_test_main_functionality.rs
crates/cli/tests/batch/: test_batch_workflow_state_paths.rs
crates/cli/tests/fixtures/: operators.json
crates/cli/tests/fixtures/workflows/: 02_validation_failure.yaml  04_expression_branching.yaml  06_task_iteration_cap.yaml  08_command_success.yaml  12_nested_expressions.yaml  16_task_timeout.yaml  18_human_decision.yaml  20_parallel_consistency.yaml  21_goal_gates.yaml  27_goal_gates_fail.yaml  28_artifact_persistence.yaml  34_iteration_limit_resume.yaml  37_gh_operator_pr_approve.yaml  41_fail_immediate_task_run_persist.yaml  42_nested_fail_task_run_persist.yaml  42b_child_runtime_fail.yaml  43_transition_include_if_eval_error.yaml  44_barrier_invalid_params.yaml  45_nested_non_object_context.yaml  47_gh_operator_branch_push.yaml  capture_stdout_false_noise.yaml  input_file_echo.yaml  io_contract_failure.yaml  io_contract_input_schema.yaml  io_contract_max_input_bytes.yaml  minimal_smoke.yaml  (+3 more)
crates/cli/tests/integration/: arg_validation_bounds.rs  cli_help_test.rs  doctor_workspace_resolution.rs  exit_codes_preserved.rs  mcp_data_malformed_call_no_exit.rs  mcp_expose_mcp_only.rs  mcp_install_dry_run.rs  mcp_off_serve_unchanged.rs  mcp_on_starts_and_logs.rs  mcp_port_conflict.rs  mcp_serve_subcommand.rs  mcp_tool_call_health.rs  serve_embedded_ailoop_path_validation.rs  serve_host_level.rs  serve_mcp_path_validation.rs  serve_with_embedded_ailoop_health.rs  serve_with_mcp_and_ailoop.rs  serve_with_mcp_responds.rs  serve_without_mcp_unchanged.rs  test_ailoop_degradation.rs  test_ask.rs  test_chat_error_codes.rs  test_chat_feature_disabled.rs  test_chat_tool_filtering.rs  test_cli_version.rs  test_command_metadata.rs  test_data_post_grade_local_store.rs  test_e2e_artifact.rs  test_e2e_ask.rs  test_e2e_batch.rs  test_e2e_checkpoint.rs  test_e2e_data.rs  test_e2e_init.rs  test_e2e_io_contract.rs  test_e2e_negative.rs  test_e2e_ops.rs  test_e2e_optimize.rs  test_e2e_resume.rs  test_e2e_run.rs  test_e2e_runs.rs  (+14 more)
crates/cli/tests/snapshots/: test_cli_commands_snapshots.rs
crates/cli/tests/support/: mod.rs
crates/core/: Cargo.toml
crates/core/schemas/: assessment-v1.schema.json  change-request-v1.schema.json
crates/core/src/: fs_util.rs  lib.rs
crates/core/src/api/: catalog.rs  change_requests.rs  dashboard.rs  findings.rs  hil.rs  magic_tools.rs  mod.rs  openapi.rs  operators.rs  opportunities.rs  optimize_run.rs  persistence.rs  plans.rs  portfolio.rs  requests.rs  state.rs  streaming.rs  testing_reset.rs  workflow_files.rs  workflows.rs
crates/core/src/core/: batch_config.rs  mod.rs  performance.rs  plan_queue_config.rs  types.rs
crates/core/src/integrations/: mod.rs
crates/core/src/logging/: config.rs  context.rs  invocation.rs  mod.rs
crates/core/src/workflow/: artifacts.rs  checkpoint.rs  child_run.rs  dot.rs  executor.rs  expression.rs  file_store.rs  io.rs  loader.rs  mod.rs  operator.rs  schema.rs  schema_export.rs  server_notifier.rs  state.rs  subprocess.rs  task_execution.rs  webhook.rs  workflow_sink.rs
crates/core/tests/: test_performance.rs  test_types.rs
crates/core/tests/contract/: test_error_handling.rs
crates/core/tests/integration/: test_api.rs  test_catalog_crud.rs  test_config_loading.rs  test_human_ailoop.rs  test_kpi_evalrun_grade_api.rs  test_lag_tolerant_streams.rs  test_logs_ws_since_seq.rs  test_magic_tools.rs  test_memory_optimization.rs  test_optimize_loop.rs  test_parallel_execution.rs  test_parity_endpoints.rs  test_persistence_parity.rs  test_recovery.rs  test_workflow_logs_ws_select.rs
crates/core/tests/lints/: no_wildcard_payload_match.rs
crates/core/tests/unit/: test_batch_config.rs  test_config_comprehensive.rs  test_engine_map_run_error.rs  test_error_comprehensive.rs  test_error_reporting.rs  test_logger.rs  test_performance_profiling.rs  test_serialization.rs
crates/core/tests/workflow_graph/: .test_explain.rs.pending-snap  test_agent_operator.rs  test_artifacts.rs  test_checkpoints.rs  test_explain.rs  test_gh_operator.rs  test_git_operator.rs  test_goal_gates.rs  test_human_ops.rs  test_io_contract.rs  test_lint.rs  test_operator_descriptor_split.rs  test_parse_and_validate.rs  test_read_control_file_operator.rs  test_resume_settings.rs  test_scheduler.rs  test_schema_export.rs  test_transforms.rs  test_webhook.rs  test_workflow_comprehensive_matrix.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: fixtures.rs  http_client.rs  lib.rs
(+15217 files in other folders)
