[package]
name = "newton"
version = "0.5.31"
edition = "2021"
authors = ["Newton Loop Framework"]
description = "CLI orchestrator for AI-driven optimization workflows."
repository = "https://github.com/gonewton/newton.git"
readme = "README.md"
categories = ["development-tools", "command-line-utilities"]
keywords = ["newton", "optimization", "ai", "cli"]
publish = false

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
tokio = { version = "1.49", features = ["full"] }
anyhow = "1.0"
aikit-sdk = "0.1.49"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
toml = "0.8"
tempfile = "3.10"
rand = "0.8"
percent-encoding = "2.1"
ratatui = { version = "0.23" }
crossterm = "0.28"
tokio-tungstenite = { version = "0.20", features = ["__rustls-tls"] }
tungstenite = { version = "0.20", features = ["__rustls-tls"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
dirs-next = "2"
tracing-appender = "0.2.4"
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.31"
futures = "0.3"
serde_yaml = "0.9"
rhai = { version = "1.11", features = ["sync"] }
petgraph = "0.7"
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4.3"
humantime = "2.1"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["limit"] }
subtle = "2"

[dev-dependencies]
assert_cmd = "2.0"
insta = "1.46.2"
serial_test = "3.2"
predicates = "3.1"
tokio-test = "0.4.5"
regex = "1.11"
wiremock = "0.6"

[[test]]
name = "test_cli_commands"
path = "tests/unit/test_cli_commands.rs"

[[test]]
name = "test_orchestrator"
path = "tests/unit/test_orchestrator.rs"

[[test]]
name = "test_utils_files"
path = "tests/unit/test_utils_files.rs"

[[test]]
name = "test_error_comprehensive"
path = "tests/unit/test_error_comprehensive.rs"

[[test]]
name = "test_history_recorder"
path = "tests/unit/test_history_recorder.rs"

[[test]]
name = "test_logger"
path = "tests/unit/test_logger.rs"

[[test]]
name = "test_tool_executor"
path = "tests/unit/test_tool_executor.rs"

[[test]]
name = "test_serialization"
path = "tests/unit/test_serialization.rs"

[[test]]
name = "test_main_functionality"
path = "tests/unit/test_main_functionality.rs"

[[test]]
name = "test_tools_execution"
path = "tests/unit/test_tools_execution.rs"

[[test]]
name = "test_comprehensive_coverage"
path = "tests/integration/test_comprehensive_coverage.rs"

[[test]]
name = "test_cli_commands_snapshots"
path = "tests/snapshots/test_cli_commands_snapshots.rs"

[[test]]
name = "test_config_comprehensive"
path = "tests/unit/test_config_comprehensive.rs"

[[test]]
name = "test_config_loading"
path = "tests/integration/test_config_loading.rs"

[[test]]
name = "test_workflow_parse_and_validate"
path = "tests/workflow_graph/test_parse_and_validate.rs"

[[test]]
name = "test_workflow_scheduler"
path = "tests/workflow_graph/test_scheduler.rs"

[[test]]
name = "test_workflow_checkpoints"
path = "tests/workflow_graph/test_checkpoints.rs"

[[test]]
name = "test_workflow_artifacts"
path = "tests/workflow_graph/test_artifacts.rs"

[[test]]
name = "test_workflow_lint"
path = "tests/workflow_graph/test_lint.rs"

[[test]]
name = "test_workflow_explain"
path = "tests/workflow_graph/test_explain.rs"

[[test]]
name = "test_workflow_human_ops"
path = "tests/workflow_graph/test_human_ops.rs"

[[test]]
name = "test_workflow_webhook"
path = "tests/workflow_graph/test_webhook.rs"

[[test]]
name = "test_workflow_goal_gates"
path = "tests/workflow_graph/test_goal_gates.rs"

[[test]]
name = "test_workflow_transforms"
path = "tests/workflow_graph/test_transforms.rs"

[[test]]
name = "test_workflow_read_control_file_operator"
path = "tests/workflow_graph/test_read_control_file_operator.rs"

[[test]]
name = "test_workflow_comprehensive_matrix"
path = "tests/workflow_graph/test_workflow_comprehensive_matrix.rs"

[[test]]
name = "test_profile_mode"
path = "tests/run/test_profile_mode.rs"

[[test]]
name = "test_runner_selection"
path = "tests/batch/test_runner_selection.rs"

[[test]]
name = "test_batch_workflow_state_paths"
path = "tests/batch/test_batch_workflow_state_paths.rs"

[[bin]]
name = "logging_integration_helper"
path = "tests/bin/logging_integration_helper.rs"
