[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/types",
    "crates/backend",
]

[workspace.package]
version = "0.5.81"
edition = "2021"
authors = ["Newton Loop Framework"]
repository = "https://github.com/gonewton/newton.git"

[workspace.dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
tokio = { version = "1.49", features = ["full"] }
anyhow = "1.0"
aikit-sdk = { version = "0.2.1", git = "https://github.com/goaikit/aikit.git", branch = "main" }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
toml = "1.1"
tempfile = "3.10"
rand = "0.8"
percent-encoding = "2.1"
ratatui = { version = "0.23" }
crossterm = "0.28"
tokio-tungstenite = { version = "0.20", features = ["__rustls-tls"] }
tungstenite = { version = "0.20", features = ["__rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
dirs-next = "2"
tracing-appender = "0.2.4"
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.31"
futures = "0.3"
serde_yaml = "0.9"
utoipa = { version = "5.4", features = ["chrono", "uuid"] }
rhai = { version = "1.11", features = ["sync"] }
petgraph = "0.7"
async-trait = "0.1"
regex = "1"
indexmap = "2"
sha2 = "0.10"
hex = "0.4.3"
humantime = "2.1"
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["limit", "cors", "fs"] }
subtle = "2"
dashmap = "6.1"
async-stream = "0.3"
tokio-stream = "0.1"
assert_cmd = "2.0"
insta = { version = "1.46.2", features = ["yaml", "redactions"] }
serial_test = "3.2"
predicates = "3.1"
tokio-test = "0.4.5"
wiremock = "0.6"
predicates-core = "1"
