[package]
name = "newton-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
newton-types = { path = "../types" }
sqlx = { workspace = true }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tempfile = { workspace = true }
