[package]
name = "newton-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Newton CLI binary."

[lib]
path = "src/lib.rs"

[[bin]]
name = "newton"
path = "src/main.rs"

[[bin]]
name = "logging_integration_helper"
path = "tests/bin/logging_integration_helper.rs"

[dependencies]
cli-framework = { git = "https://github.com/aroff/cli-framework" }
newton-core = { path = "../core" }
newton-types = { path = "../types" }
newton-backend = { path = "../backend" }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
tungstenite = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }
indexmap = { workspace = true }
dirs-next = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
aikit-sdk = { workspace = true }
percent-encoding = { workspace = true }
humantime = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
# Optional: OpenSSL with vendored feature for static musl builds
openssl = { version = "0.10", optional = true, features = ["vendored"] }

[features]
# Feature flag to enable vendored OpenSSL for static musl builds
vendored-openssl = ["openssl"]
# Enable the natural-language `ask` router (issue #231 D3).
ask = []

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
serial_test = { workspace = true }
predicates = { workspace = true }
tokio-test = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }

[[test]]
name = "test_main_functionality"
path = "tests/unit_test_main_functionality.rs"

[[test]]
name = "cli_help_test"
path = "tests/integration/cli_help_test.rs"

[[test]]
name = "test_logging_framework"
path = "tests/integration/test_logging_framework.rs"

[[test]]
name = "test_log_commands"
path = "tests/integration/test_log_commands.rs"

[[test]]
name = "test_batch_workflow_state_paths"
path = "tests/batch/test_batch_workflow_state_paths.rs"

[[test]]
name = "test_workflow_scenarios"
path = "tests/integration/test_workflow_scenarios.rs"

[[test]]
name = "test_cli_version"
path = "tests/integration/test_cli_version.rs"

[[test]]
name = "test_ops_commands"
path = "tests/integration/test_ops_commands.rs"

[[test]]
name = "test_command_metadata"
path = "tests/integration/test_command_metadata.rs"

[[test]]
name = "test_ask"
path = "tests/integration/test_ask.rs"
required-features = ["ask"]
