[package]
name = "newton-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Newton CLI binary."

[lib]
path = "src/lib.rs"

[[bin]]
name = "newton"
path = "src/main.rs"

[[bin]]
name = "logging_integration_helper"
path = "tests/bin/logging_integration_helper.rs"

[dependencies]
cli-framework = { git = "https://github.com/aroff/cli-framework", rev = "0b2b1b2", features = ["mcp-server"] }
rmcp = { version = "1.6", features = ["server", "transport-streamable-http-server"] }
newton-core = { path = "../core" }
newton-types = { path = "../types" }
newton-backend = { path = "../backend" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }
indexmap = { workspace = true }
dirs-next = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
aikit-sdk = { workspace = true }
percent-encoding = { workspace = true }
humantime = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
# Optional: OpenSSL with vendored feature for static musl builds
openssl = { version = "0.10", optional = true, features = ["vendored"] }

[features]
# Feature flag to enable vendored OpenSSL for static musl builds
vendored-openssl = ["openssl"]
# Enable the natural-language `ask` router (issue #231 D3).
ask = []

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
serial_test = { workspace = true }
predicates = { workspace = true }
tokio-test = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
wait-timeout = "0.2"

[[test]]
name = "test_main_functionality"
path = "tests/unit_test_main_functionality.rs"

[[test]]
name = "cli_help_test"
path = "tests/integration/cli_help_test.rs"

[[test]]
name = "test_logging_framework"
path = "tests/integration/test_logging_framework.rs"

[[test]]
name = "test_log_commands"
path = "tests/integration/test_log_commands.rs"

[[test]]
name = "test_batch_workflow_state_paths"
path = "tests/batch/test_batch_workflow_state_paths.rs"

[[test]]
name = "test_workflow_scenarios"
path = "tests/integration/test_workflow_scenarios.rs"

[[test]]
name = "test_cli_version"
path = "tests/integration/test_cli_version.rs"

[[test]]
name = "test_ops_commands"
path = "tests/integration/test_ops_commands.rs"

[[test]]
name = "test_command_metadata"
path = "tests/integration/test_command_metadata.rs"

[[test]]
name = "test_ask"
path = "tests/integration/test_ask.rs"
required-features = ["ask"]

[[test]]
name = "mcp_off_serve_unchanged"
path = "tests/integration/mcp_off_serve_unchanged.rs"

[[test]]
name = "mcp_on_starts_and_logs"
path = "tests/integration/mcp_on_starts_and_logs.rs"

[[test]]
name = "mcp_port_conflict"
path = "tests/integration/mcp_port_conflict.rs"

[[test]]
name = "mcp_tool_call_health"
path = "tests/integration/mcp_tool_call_health.rs"

[[test]]
name = "serve_with_mcp_responds"
path = "tests/integration/serve_with_mcp_responds.rs"

[[test]]
name = "serve_without_mcp_unchanged"
path = "tests/integration/serve_without_mcp_unchanged.rs"

[[test]]
name = "serve_mcp_path_validation"
path = "tests/integration/serve_mcp_path_validation.rs"

[[test]]
name = "mcp_expose_mcp_only"
path = "tests/integration/mcp_expose_mcp_only.rs"

[[test]]
name = "mcp_serve_subcommand"
path = "tests/integration/mcp_serve_subcommand.rs"

[[test]]
name = "test_e2e_smoke"
path = "tests/integration/test_e2e_smoke.rs"

[[test]]
name = "test_e2e_coverage_matrix"
path = "tests/test_e2e_coverage_matrix.rs"

[[test]]
name = "test_e2e_run"
path = "tests/integration/test_e2e_run.rs"

[[test]]
name = "test_e2e_workflow"
path = "tests/integration/test_e2e_workflow.rs"

[[test]]
name = "test_e2e_runs"
path = "tests/integration/test_e2e_runs.rs"

[[test]]
name = "test_e2e_resume"
path = "tests/integration/test_e2e_resume.rs"

[[test]]
name = "test_e2e_checkpoint"
path = "tests/integration/test_e2e_checkpoint.rs"

[[test]]
name = "test_e2e_artifact"
path = "tests/integration/test_e2e_artifact.rs"

[[test]]
name = "test_e2e_init"
path = "tests/integration/test_e2e_init.rs"

[[test]]
name = "test_e2e_batch"
path = "tests/integration/test_e2e_batch.rs"

[[test]]
name = "test_e2e_ops"
path = "tests/integration/test_e2e_ops.rs"

[[test]]
name = "test_e2e_webhook"
path = "tests/integration/test_e2e_webhook.rs"

[[test]]
name = "test_e2e_ask"
path = "tests/integration/test_e2e_ask.rs"

[[test]]
name = "test_e2e_negative"
path = "tests/integration/test_e2e_negative.rs"

[[test]]
name = "test_e2e_io_contract"
path = "tests/integration/test_e2e_io_contract.rs"

[[test]]
name = "test_e2e_data"
path = "tests/integration/test_e2e_data.rs"
