[package]
name = "newton-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Newton CLI binary."

[lib]
path = "src/lib.rs"

[[bin]]
name = "newton"
path = "src/main.rs"

[[bin]]
name = "logging_integration_helper"
path = "tests/bin/logging_integration_helper.rs"

[dependencies]
cli-framework = { git = "https://github.com/aroff/cli-framework", rev = "268de6e7b2a490c7345941b961487165a8e840bb", default-features = false, features = ["mcp-server", "mcp-install", "api-server", "api-swagger"] }
rmcp = { version = "1.6", features = ["server", "transport-streamable-http-server"] }
utoipa-swagger-ui = { version = "9.0.2", default-features = false, features = ["vendored", "url"] }
newton-core = { path = "../core" }
newton-types = { path = "../types" }
newton-backend = { path = "../backend" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }
indexmap = { workspace = true }
schemars = { workspace = true }
dirs-next = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
aikit-sdk = { workspace = true }
ailoop-server = { workspace = true }
tokio-util = { workspace = true }
percent-encoding = { workspace = true }
humantime = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
# Optional: OpenSSL with vendored feature for static musl builds
openssl = { version = "0.10", optional = true, features = ["vendored"] }

[features]
# Keep `cli-framework`'s built-in `chat` command enabled by default, while
# supporting deterministic `--no-default-features` builds that disable it.
default = ["chat"]
chat = ["cli-framework/chat"]
# Feature flag to enable vendored OpenSSL for static musl builds
vendored-openssl = ["openssl"]

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
serial_test = { workspace = true }
predicates = { workspace = true }
tokio-test = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
wait-timeout = "0.2"
tokio-tungstenite = { workspace = true }
ws001-test-utils = { path = "../test-utils" }

[[test]]
name = "test_main_functionality"
path = "tests/unit_test_main_functionality.rs"

[[test]]
name = "cli_help_test"
path = "tests/integration/cli_help_test.rs"

[[test]]
name = "test_logging_framework"
path = "tests/integration/test_logging_framework.rs"

[[test]]
name = "test_log_commands"
path = "tests/integration/test_log_commands.rs"

[[test]]
name = "test_batch_workflow_state_paths"
path = "tests/batch/test_batch_workflow_state_paths.rs"

[[test]]
name = "test_workflow_scenarios"
path = "tests/integration/test_workflow_scenarios.rs"

[[test]]
name = "test_cli_version"
path = "tests/integration/test_cli_version.rs"

[[test]]
name = "test_ops_commands"
path = "tests/integration/test_ops_commands.rs"

[[test]]
name = "test_command_metadata"
path = "tests/integration/test_command_metadata.rs"

[[test]]
name = "mcp_off_serve_unchanged"
path = "tests/integration/mcp_off_serve_unchanged.rs"

[[test]]
name = "mcp_on_starts_and_logs"
path = "tests/integration/mcp_on_starts_and_logs.rs"

[[test]]
name = "mcp_port_conflict"
path = "tests/integration/mcp_port_conflict.rs"

[[test]]
name = "mcp_tool_call_health"
path = "tests/integration/mcp_tool_call_health.rs"

[[test]]
name = "serve_with_mcp_responds"
path = "tests/integration/serve_with_mcp_responds.rs"

[[test]]
name = "serve_without_mcp_unchanged"
path = "tests/integration/serve_without_mcp_unchanged.rs"

[[test]]
name = "serve_host_level"
path = "tests/integration/serve_host_level.rs"

[[test]]
name = "mcp_expose_mcp_only"
path = "tests/integration/mcp_expose_mcp_only.rs"

[[test]]
name = "mcp_serve_subcommand"
path = "tests/integration/mcp_serve_subcommand.rs"

[[test]]
name = "mcp_install_dry_run"
path = "tests/integration/mcp_install_dry_run.rs"

[[test]]
name = "test_e2e_smoke"
path = "tests/integration/test_e2e_smoke.rs"

[[test]]
name = "test_e2e_coverage_matrix"
path = "tests/test_e2e_coverage_matrix.rs"

[[test]]
name = "test_e2e_workflow"
path = "tests/integration/test_e2e_workflow.rs"

[[test]]
name = "test_e2e_runs"
path = "tests/integration/test_e2e_runs.rs"

[[test]]
name = "test_e2e_resume"
path = "tests/integration/test_e2e_resume.rs"

[[test]]
name = "test_e2e_checkpoint"
path = "tests/integration/test_e2e_checkpoint.rs"

[[test]]
name = "test_e2e_artifact"
path = "tests/integration/test_e2e_artifact.rs"

[[test]]
name = "test_e2e_init"
path = "tests/integration/test_e2e_init.rs"

[[test]]
name = "test_e2e_optimize"
path = "tests/integration/test_e2e_optimize.rs"

[[test]]
name = "test_e2e_ops"
path = "tests/integration/test_e2e_ops.rs"

[[test]]
name = "test_e2e_negative"
path = "tests/integration/test_e2e_negative.rs"

[[test]]
name = "test_e2e_io_contract"
path = "tests/integration/test_e2e_io_contract.rs"

[[test]]
name = "test_e2e_data"
path = "tests/integration/test_e2e_data.rs"

[[test]]
name = "test_grade_crud"
path = "tests/integration/test_grade_crud.rs"

[[test]]
name = "test_opportunity_crud"
path = "tests/integration/test_opportunity_crud.rs"

[[test]]
name = "serve_with_embedded_ailoop_health"
path = "tests/integration/serve_with_embedded_ailoop_health.rs"

[[test]]
name = "serve_embedded_ailoop_path_validation"
path = "tests/integration/serve_embedded_ailoop_path_validation.rs"

[[test]]
name = "serve_with_mcp_and_ailoop"
path = "tests/integration/serve_with_mcp_and_ailoop.rs"

[[test]]
name = "test_streaming_parity"
path = "tests/integration/test_streaming_parity.rs"

[[test]]
name = "test_data_post_grade_local_store"
path = "tests/integration/test_data_post_grade_local_store.rs"

[[test]]
name = "test_state_dir_one_root"
path = "tests/integration/test_state_dir_one_root.rs"

[[test]]
name = "test_chat_error_codes"
path = "tests/integration/test_chat_error_codes.rs"

[[test]]
name = "test_chat_tool_filtering"
path = "tests/integration/test_chat_tool_filtering.rs"

[[test]]
name = "mcp_data_malformed_call_no_exit"
path = "tests/integration/mcp_data_malformed_call_no_exit.rs"

[[test]]
name = "exit_codes_preserved"
path = "tests/integration/exit_codes_preserved.rs"

[[test]]
name = "test_run_input_file_verbose"
path = "tests/integration/test_run_input_file_verbose.rs"
