[package]
name = "ws001-test-utils"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio.workspace = true
tempfile.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true

axum.workspace = true
reqwest = { workspace = true, optional = true }
wiremock = { workspace = true, optional = true }

[features]
default = []
http = ["dep:reqwest", "dep:wiremock"]
